--- a/mobileos-cloud/mobileos-business/pom.xml
+++ b/mobileos-cloud/mobileos-business/pom.xml
@@ -52,6 +52,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-feign</artifactId>
+			<version>1.4.4.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
