1.Adicionado Login e Menu Principal

--- a/mobileos-android/app/src/main/AndroidManifest.xml
+++ b/mobileos-android/app/src/main/AndroidManifest.xml
@@ -30,6 +30,11 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             />
+
+        <activity android:name=".features.principal.MenuPrincipalActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"
+            />
     </application>
 
 </manifest>
